fix spacing for prompt div

--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -59,6 +59,9 @@ body {
   background: linear-gradient(315deg, var(--accent), var(--bg));
   background-size: 400% 400%;
   animation: lava 30s ease infinite;
+  box-sizing: border-box;
+  height: 100%;
+  width: 100%;
 }
 
 #prompt {
